scripts/deployment-gym.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gym
  namespace: default
spec:
  replicas: 3
  template:
    metadata:
      name: gym
      labels:
        app: gym
    spec:
      containers:
      - name: gym
        image: nikhilagrwl07/springboot-jpa-mysql-docker:v4
