scripts/service-gym.yml
kind: Service
apiVersion: v1
metadata:
  name: gym-service
spec:
  selector:
    app: gym
  ports:
    - name: port1
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
